--- a/1 first code batch.html
+++ b/1 first code batch.html
@@ -1,5 +1,18 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-<h1>hey.i am a big heading</h1>
-<p>i am a paragraph element. cool huh ?</p>
-<a href="https://google.com"target="_blank"title="lets go to google">click me! i am a link</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>test page</title>
+</head>
+<body>
+    <h1>hey.i am a big heading</h1>
+    <p>i am a  <b>paragraph</b> element. cool huh ?</p>
+    <a href="https://google.com"target="_blank"title="lets go to google">click me! i am a link</a>
+    <p>my name is: <br>
+    kitty cat</p>
+    <img src="http://2.bp.blogspot.com/-WtdFq_e6eKo/TV5W5s-hS-I/AAAAAAAAAvM/gmCUYOx3bX8/s1600/Animals_Cats_Small_cat_005241_.jpg"> 
+</body>
+</html>
