--- a/1 first code batch.html
+++ b/1 first code batch.html
@@ -8,7 +8,7 @@
     <title>test page</title>
 </head>
 <body>
-    <h1>hey.i am a big heading</h1>
+    <h1>hey i am a big fat heading</h1>
     <p>i am a  <b>paragraph</b> element. cool huh ?</p>
     <a href="https://google.com"target="_blank"title="lets go to google">click me! i am a link</a>
     <p>my name is: <br>
